--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,35 @@
 {
-  "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    // "allowJs": true,
-    "declaration": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": ["ESNext", "DOM"],
-    "module": "umd",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "target": "ESNext",
-    "traceResolution": false,
-    "outDir": "lib",
-    "baseUrl": "./",
-    "paths": {
-      "@root/*": ["./*"],
-      "@util/*": ["./util/*"]
-    }
-  },
-  "include": ["src"],
-  "exclude": ["node_modules", "src/test.ts", "src/**/*.spec.ts"]
+    "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
+        // "allowJs": true,
+        "declaration": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "lib": [
+            "ESNext",
+            "DOM",
+            "DOM.Iterable"
+        ],
+        "module": "umd",
+        "moduleResolution": "node",
+        "sourceMap": true,
+        "target": "ESNext",
+        "traceResolution": false,
+        "outDir": "lib",
+        "baseUrl": "./",
+        "paths": {
+            "@root/*": [
+                "./*"
+            ],
+        }
+    },
+    "include": [
+        "src"
+    ],
+    "exclude": [
+        "node_modules",
+        "src/test.ts",
+        "src/**/*.spec.ts"
+    ]
 }
