--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,28 @@
 {
+    // For IDE
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
-        // "allowJs": true,
-        "declaration": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "lib": [
-            "ESNext",
-            "DOM",
-            "DOM.Iterable"
-        ],
-        "module": "umd",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "target": "ESNext",
-        "traceResolution": false,
-        "outDir": "lib",
-        "baseUrl": "./",
-        "paths": {
-            "@root/*": [
-                "./*"
-            ],
-        }
+        "outDir": "lib-esm",
+        "module": "ESNext",
     },
     "include": [
         "src"
     ],
     "exclude": [
         "node_modules",
-        "src/test.ts",
+        "src/**/*.example.ts",
         "src/**/*.spec.ts"
-    ]
+    ],
+    "ts-node": {
+        // It is faster to skip typechecking.
+        // Remove if you want ts-node to do typechecking.
+        "transpileOnly": true,
+        "files": true,
+        "compilerOptions": {
+            // compilerOptions specified here will override those declared below,
+            // but *only* in ts-node.  Useful if you want ts-node and tsc to use
+            // different options with a single tsconfig.json.
+            "module": "CommonJS"
+        }
+    }
 }
